Adding official email address

--- a/ETradingEcoSystemTraining.htm
+++ b/ETradingEcoSystemTraining.htm
@@ -2939,7 +2939,7 @@ auto;text-align:center;background:white'><b><span style='font-size:16.0pt;
 font-family:"Segoe UI",sans-serif;mso-fareast-font-family:"Times New Roman";
 color:#0070C0;mso-font-kerning:0pt;mso-fareast-language:EN-GB'>For course
 details, arrangements or queries, email:<br>
-manish.baphna@gmail.com<o:p></o:p></span></b></p>
+learn@etradingsystems.training<o:p></o:p></span></b></p>
 
 <p class=MsoNormal align=center style='margin-bottom:0cm;text-align:center;
 background:#F9EBEB'><span style='font-size:15.5pt;font-family:"Segoe UI",sans-serif;
