Minor format changes

--- a/index.html
+++ b/index.html
@@ -2264,7 +2264,7 @@ color:black;mso-font-kerning:0pt;mso-fareast-language:EN-GB'><span
 style='mso-list:Ignore'>o<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
 </span></span></span><![endif]><span style='font-size:13.5pt;font-family:"Segoe UI",sans-serif;
 mso-fareast-font-family:"Times New Roman";color:black;mso-font-kerning:0pt;
-mso-fareast-language:EN-GB'>Developers don’t understand The Big Picture and
+mso-fareast-language:EN-GB'>Developers don't understand The Big Picture and
 remain constrained to their immediate system while designing.<o:p></o:p></span></p>
 
 <p class=MsoListParagraphCxSpMiddle align=center style='mso-margin-top-alt:
@@ -2275,7 +2275,7 @@ color:black;mso-font-kerning:0pt;mso-fareast-language:EN-GB'><span
 style='mso-list:Ignore'>o<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;
 </span></span></span><![endif]><span style='font-size:13.5pt;font-family:"Segoe UI",sans-serif;
 mso-fareast-font-family:"Times New Roman";color:black;mso-font-kerning:0pt;
-mso-fareast-language:EN-GB'>Technologists don’t appreciate the <i>Reasoning
+mso-fareast-language:EN-GB'>Technologists don't appreciate the <i>Reasoning
 behind Regulations </i>and treat compliance tasks as a boring, mandatory task.<o:p></o:p></span></p>
 
 <p class=MsoListParagraphCxSpLast align=center style='mso-margin-top-alt:auto;
@@ -2831,7 +2831,7 @@ Baphna<o:p></o:p></span></b></p>
 auto;text-align:center;background:white'><span style='font-size:13.5pt;
 font-family:"Segoe UI",sans-serif;mso-fareast-font-family:"Times New Roman";
 color:black;mso-font-kerning:0pt;mso-fareast-language:EN-GB'>Software Design
-Manager, Algo Trading, Citigroup, London<o:p></o:p></span></p>
+Manager, Electronic Trading Technology, Citigroup, London<o:p></o:p></span></p>
 
 <p class=MsoListParagraphCxSpFirst align=center style='mso-margin-top-alt:auto;
 margin-bottom:6.0pt;margin-left:54.0pt;mso-add-space:auto;text-align:center;
