--- a/index.html
+++ b/index.html
@@ -380,6 +380,8 @@
                     <h2 class="text-4xl md:text-5xl font-bold text-white mb-6">Comprehensive eTrading Systems Training</h2>
                     <p class="text-xl text-gray-400 max-w-3xl mx-auto">
                         We empower your teams through a first-of-its-kind, industry-specific training program designed to create a shared, holistic understanding of the entire eTrading ecosystem.
+                        This training is designed to accelerate your team's knowledge and maturity. They don't need to wait years to acquire the hard-won expertise that typically comes from long-term struggle 
+                        and fixing costly production issues. 
                     </p>
                 </div>
 
@@ -551,7 +553,7 @@
                         <i class="fas fa-user-tie"></i>
                         MEET YOUR INSTRUCTOR
                     </div>
-                    <h2 class="text-4xl md:text-5xl font-bold text-white mb-6">Learn from a Battle-Tested Industry Veterans</h2>
+                    <h2 class="text-4xl md:text-5xl font-bold text-white mb-6">Learn from Battle-Tested Industry Veterans</h2>
                     <p class="text-xl text-gray-400 max-w-3xl mx-auto">
                         This course is led by active professionals who have lived the challenges of building and maintaining complex eTrading systems.
                     </p>
@@ -570,7 +572,7 @@
                                     </div>
                                     <div>
                                         <h4 class="font-bold text-white">In-the-Trenches Expertise</h4>
-                                        <p class="text-gray-400">Have tirelessly worked to fix critical production issues, experienced the real-world consequences of design choices.</p>
+                                        <p class="text-gray-400">Have tirelessly worked to manage mammoth trading platforms transacting billions, fixed critical production issues, experienced the real-world consequences of design choices.</p>
                                     </div>
                                 </li>
                                 <li class="flex items-start gap-4">
@@ -588,7 +590,7 @@
                                     </div>
                                     <div>
                                         <h4 class="font-bold text-white">Multi-Faceted Communicators</h4>
-                                        <p class="text-gray-400">Adept at transforming complex concepts for varied audiences as they have juggled many hats</p>
+                                        <p class="text-gray-400">Adept at bridging the communication chasm between business, compliance, and technology because they've lived at the intersection of all three.</p>
                                     </div>
                                 </li>
                             </ul>
@@ -637,9 +639,9 @@
                         <h3 class="text-xl font-bold text-white mb-3">Career Advancement</h3>
                         <p class="text-gray-400">Comprehensive knowledge opens doors to senior technical and leadership roles.</p>
                     </div>
-
-                </div>
+                </div>    
             </div>
+            
         </section>
 
         <section class="py-12">
